# CG

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
00_StartProgram/: CMakeLists.txt  StartProgram.cpp
00_StarterPack/: CMakeLists.txt  StarterPack.cpp
01_CPURayTracer/: BVH.cpp  BVH.h  BVHTracer.cpp  BVHTracer.h  CMakeLists.txt  CPURayTracer.cpp  Camera.h  Math.h  Mesh.cpp  Mesh.h  Primitives.h  Random.h  Ray.h  Scene.cpp  Scene.h  Shader.h  Timer.cpp  Timer.h
Docs/: ECS.md  LGSD09.md  SFD09.md  index.md
Lee/: CMakeLists.txt  Core.h
Lee/Component/: IComponent.h
Lee/Core/: Application.cpp  Application.h  Window.cpp  Window.h  pch.h
Lee/Graphics/Metal/: WindowAdaptor.mm
Lee/System/: BasicRenderingSystem.h  ISystem.h
Lee/Utils/: Camera.h
Source/: Application.cpp  Application.h  CMakeLists.txt  Scene.h  Window.cpp  Window.h  main.cpp
Source/Core/: CMakeLists.txt  ColorComponent.h  Component.h  ComponentManager.h  Entity.h  EntityManager.cpp  EntityManager.h  MeshComponent.cpp  MeshComponent.h
Source/Graphics/Metal/: GLFWAdapter.h  MtCommon.h  MtDevice.cpp  MtDevice.h  MtRHI.cpp  MtRHI.h  MtSwapChain.h
Source/LE/: Camera.h  Core.cpp  Core.h  Display.cpp  Display.h  GLFWAdapter.h  LE.h  MinimalPathTracer.h  RenderQuad.metal  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Square.metal  VertexData.h
Source/Math/: Color.h  Ray.h  Sphere.h  Triangle.h  Vertex.h
Source/Platform/: CMakeLists.txt  Window.cpp  Window.h
Source/Renderer/: Buffer.h  CMakeLists.txt  CommandBuffer.h  CommandQueue.h  Device.cpp  Device.h  GraphicsContext.h  RHI.cpp  RHI.h  RenderPass.h  RenderPipeline.h  RenderRHI.h  RenderSystem.h  Renderer.cpp  Renderer.h  RendererAPI.cpp  RendererAPI.h  SwapChain.cpp  SwapChain.h
Source/Renderer/RenderRHI/: GraphicsContextBridge.h
Source/Renderer/RenderRHI/Metal/: CMakeLists.txt  Metal_Renderer.h  Metal_Renderer.mm  MtBuffer.h  MtCommandQueue.h  MtCommandQueue.mm  MtDevice.h  MtDevice.mm  MtGraphicsContext.mm  MtRenderPipeline.h  MtWindowDelegate.h
Source/Utils/: Camera.h
old/Source/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
old/Source/Core/: CMakeLists.txt  Mesh.h  Model.h  Scene.h  System.h
old/Source/Math/: Vec3.h
old/Source/Platform/: Window.cpp
old/Source/Renderer/: Buffer.h  CMakeLists.txt  CommandBuffer.h  CommandQueue.h  GraphicsContext.h  RenderPipeline.h  Renderer.h  RenderingSystem.h  ShaderLibrary.h  WindowDelegate.h
old/Source/Renderer/RenderRHI/Metal/: Metal_Renderer.h  MtBuffer.mm  MtCommandBuffer.h  MtCommandQueue.h  MtGraphicsContext.h  MtRenderPipeline.mm  MtShaderLibrary.h  MtShaderLibrary.mm
old/Source/Utils/: CMakeLists.txt  Camera.h  FileUtils.cpp  FileUtils.h
